--- a/index.html
+++ b/index.html
@@ -7,10 +7,105 @@
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Portfolio</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <header id="home">
+      <h1 class="student-name">Student Name</h1>
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <img
+        src="./images/responsive-layout-profile.png"
+        alt="Image of the student"
+      />
+      <p>
+        Hi! I'm a front-end developer who loves responsive design and css. I
+        recently finished a degree in front-end web development at Treehouse and
+        am excited to put all my skills to use!
+      </p>
+    </header>
+    <main>
+      <div class="portfolio" id="portfolio">
+        <h3>Portfolio</h3>
+        <img src="./images/portfolio-1.png" alt="Marketing website image" />
+        <h2>Marketing Page</h2>
+        <p>
+          This project shows the front page of a marketing website meant for a
+          specific business I'm interested in.
+        </p>
+        <section>
+          <img src="./images/portfolio-2.png" alt="Search website image" />
+          <h2>Search Page</h2>
+          <p>
+            this project searches through a specific database to find
+            information that hte user is trying to look up.
+          </p>
+        </section>
+        <section>
+          <img src="./images/portfolio-3.png" alt="Travel website image" />
+          <h2>Travel App</h2>
+          <p>
+            This project compares travel times based on different transportation
+            methods and tells you the best one.
+          </p>
+        </section>
+        <section>
+          <img
+            src="./images/portfolio-4.png"
+            alt="Map of favorite spots website image"
+          />
+          <h2>Map of Favorite Spots</h2>
+          <p>
+            This project uses mapping apis to plot points for my favorite spots
+            in the city for a do-it-yourself waling tour.
+          </p>
+        </section>
+        <section>
+          <img
+            src="./images/portfolio-5.png"
+            alt="Photo gallery website image"
+          />
+          <h2>Photo Gallery</h2>
+          <p>
+            This project shows pictures from a recent trip to the viewer and
+            allows them to easily navigate through photos.
+          </p>
+        </section>
+        <section>
+          <img src="./images/portfolio-6.png" alt="Calculator website image" />
+          <h2>Calculator</h2>
+          <p>
+            Someone can enter in the numbers they want, and press the big blue
+            button and get the result.
+          </p>
+        </section>
+      </div>
+    </main>
+    <footer id="contact">
+      <p class="title">Contact</p>
+      <p class="description">
+        If you're interested in chatting or want more information about what
+        I've been working on, I'd love to hear from you!
+      </p>
+      <p>Phone<span class="contact-info">+1 (111) 555-1234</span></p>
+      <p>Email<span class="contact-info">email@yoursite.com</span></p>
+      <hr />
+      <div class="bottom-footer">
+        <p>Student name</p>
+        <a href="#home">Back to top</a>
+      </div>
+    </footer>
   </body>
 </html>
